login logout implemented

--- a/src/main/webapp/sablon.xhtml
+++ b/src/main/webapp/sablon.xhtml
@@ -27,7 +27,7 @@
                 <p:menuButton value="Kullanıcı İşlem" style="left: 50px;top: -120px">
                     <p:menuitem value="Bilgi Güncelle" icon="ui-icon-refresh"
                                 onclick="PF('dlg10').show();"></p:menuitem>
-                    <p:menuitem value="Çıkış" icon="ui-icon-power"> </p:menuitem>
+                    <p:menuitem value="Çıkış" icon="ui-icon-power" action="#{sablonBean.cikisButonu}"> </p:menuitem>
                 </p:menuButton>
             </p:outputPanel>
         </h:panelGrid>
