--- a/src/main/webapp/secured/bilgiguncelle.xhtml
+++ b/src/main/webapp/secured/bilgiguncelle.xhtml
@@ -6,7 +6,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-<link rel="stylesheet" href="style.css"/>
+<link rel="stylesheet" href="../style.css"/>
 <h:head>
 
 </h:head>
