--- a/src/main/webapp/secured/kullaniciislem.xhtml
+++ b/src/main/webapp/secured/kullaniciislem.xhtml
@@ -3,7 +3,7 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:p="http://primefaces.org/ui"
-                template="sablon.xhtml">
+                template="../sablon.xhtml">
     <ui:define name="content">
         <h:form>
             <p:panelGrid columns="2" styleClass="kullanıcıara">
