--- a/src/main/webapp/secured/sunucuislem.xhtml
+++ b/src/main/webapp/secured/sunucuislem.xhtml
@@ -3,7 +3,7 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:p="http://primefaces.org/ui"
-                template="sablon.xhtml">
+                template="../sablon.xhtml">
     <ui:define name="content">
         <h:form id="form">
 
